--- a/mmv1/templates/terraform/examples/network_connectivity_service_connection_maps_basic.tf.erb
+++ b/mmv1/templates/terraform/examples/network_connectivity_service_connection_maps_basic.tf.erb
@@ -16,6 +16,13 @@ resource "google_compute_network" "producer_net" {
   auto_create_subnetworks = false
 }
 
+resource "google_compute_subnetwork" "producer_subnet_psc" {
+  name          = "<%= ctx[:vars]['producer_subnetwork_name'] %>"
+  ip_cidr_range = "10.1.0.0/16"
+  region        = "us-central1"
+  network       = google_compute_network.producer_net.id
+}
+
 resource "google_compute_subnetwork" "producer_subnet" {
   name          = "<%= ctx[:vars]['producer_subnetwork_name'] %>"
   ip_cidr_range = "10.0.0.0/16"
@@ -41,7 +48,7 @@ resource "google_compute_service_attachment" "default" {
 
   enable_proxy_protocol = true
   connection_preference = "ACCEPT_MANUAL"
-  nat_subnets           = [google_compute_subnetwork.subnetwork_consumer.id]
+  nat_subnets           = [google_compute_subnetwork.producer_subnet_psc.id]
   target_service        = google_compute_forwarding_rule.default.id
 }
 
@@ -70,7 +77,7 @@ resource "google_network_connectivity_service_connection_policy" "default" {
   service_class = google_network_connectivity_service_class.default.service_class
   network       = google_compute_network.consumer_net.id
   psc_config {
-    subnetworks = [google_compute_subnetwork.producer_subnet.id]
+    subnetworks = [google_compute_subnetwork.subnetwork_consumer.id]
     limit = 2
   }
 }
@@ -82,7 +89,7 @@ resource "google_network_connectivity_service_connection_map" "default" {
         service_attachment_uri = google_compute_service_attachment.default.id
     }
     consumer_psc_configs {
-        project = google_compute_network.producer_net.project
-        network = google_compute_network.producer_net.id
+        project = google_compute_network.subnetwork_consumer.project
+        network = google_compute_network.subnetwork_consumer.id
     }
 }
